--- a/src/main/webapp/views/books/list.html
+++ b/src/main/webapp/views/books/list.html
@@ -1,6 +1,8 @@
 <h3>Books <button type="button" class="btn btn-primary pull-right" ng-click="openModal()"><i class="icon-plus-sign icon-white"></i> Add New</button> </h3>
 </br>
 
+<loading></loading>
+
 <table class="table table-striped">
     <tr>
         <td><h4>Title</h4></td>
